- Fixed error in shutdown for Linux/MAC. Using `sudo` requires a console and as observed it's not needed at least in Linux Mint or Fedora... more tests to come.