@@ -6,7 +6,9 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.SystemUtils;
 import org.apache.commons.lang3.math.NumberUtils;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.Socket;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
@@ -16,80 +18,100 @@ import java.util.List;
 @Slf4j
 public class ShutdownNetworkAction extends NetworkAction {
 
-	private final boolean isDryRun;
+    private final boolean isDryRun;
 
-	public ShutdownNetworkAction(Socket socket, String[] args, NetworkInfoProvider provider, boolean isDryRun) {
-		super(socket, args, provider);
-		this.isDryRun = isDryRun;
-	}
+    public ShutdownNetworkAction(Socket socket, String[] args, NetworkInfoProvider provider, boolean isDryRun) {
+        super(socket, args, provider);
+        this.isDryRun = isDryRun;
+    }
 
-	@Override
-	public void execute() throws IOException {
-		ShutdownNetworkActionData request = parseArguments();
-		if (request == null) {
-			log.warn("Request arguments are wrong. args={}", Arrays.toString(args));
-			writeToSocket(socket, "ERROR invalid arguments");
-			return;
-		}
+    @Override
+    public void execute() throws IOException {
+        ShutdownNetworkActionData request = parseArguments();
+        if (request == null) {
+            log.warn("Request arguments are wrong. args={}", Arrays.toString(args));
+            writeToSocket(socket, "ERROR invalid arguments");
+            return;
+        }
 
-		long totalTimeInSeconds = request.getDelay() * request.getUnit().getDuration().getSeconds();
-		String[] cmdLine = buildCommandLine(totalTimeInSeconds);
+        long totalTimeInSeconds = request.getDelay() * request.getUnit().getDuration().getSeconds();
+        String[] cmdLine = buildCommandLine(totalTimeInSeconds);
 
-		log.info("Executing shutdown -> {}", StringUtils.join(cmdLine, " "));
-		writeToSocket(socket, "ACK");
+        log.info("Executing shutdown -> {}", StringUtils.join(cmdLine, " "));
+        writeToSocket(socket, "ACK");
 
-		if (!isDryRun) {
-			try {
-				Runtime.getRuntime().exec(cmdLine);
-			}
-			catch (IOException e) {
-				log.error("Error executing shutdown command", e);
-			}
-		}
-		else {
-			log.info("DryRun mode ON: shutdown not executed");
-		}
-	}
+        if (!isDryRun) {
+            try {
+                ProcessBuilder builder = new ProcessBuilder(cmdLine);
 
-	@SuppressWarnings("unchecked")
-	protected ShutdownNetworkActionData parseArguments() {
-		if (args.length < 3)
-			return null;
+                // Redirect the error stream to the output stream to ensure all output is captured
+                builder.redirectErrorStream(true);
+                Process process = builder.start();
 
-		String delay = args[1];
-		String unit = args[2];
+                // Get the input stream (which now includes standard error due to redirectErrorStream(true))
+                try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        log.debug(line);
+                    }
+                }
 
-		boolean isNumericDelay = NumberUtils.isCreatable(delay);
-		boolean isTimeUnit = Arrays.stream(ChronoUnit.values())
-			.anyMatch(chronoUnit -> chronoUnit.name().equalsIgnoreCase(unit));
+                // Wait for the process to complete and get the exit code
+                int exitCode = process.waitFor();
+                log.debug("shutdown exit code: {}", exitCode);
+            } catch (IOException | InterruptedException e) {
+                log.error("Error executing shutdown command", e);
+            }
+        } else {
+            log.info("DryRun mode ON: shutdown not executed");
+        }
+    }
 
-		if (isNumericDelay && isTimeUnit) {
-			return ShutdownNetworkActionData.builder()
-				.delay(Integer.parseInt(delay))
-				.unit(ChronoUnit.valueOf(unit.toUpperCase()))
-				.build();
-		}
+    @SuppressWarnings("unchecked")
+    protected ShutdownNetworkActionData parseArguments() {
+        if (args.length < 3)
+            return null;
 
-		return null;
-	}
+        String delay = args[1];
+        String unit = args[2];
 
-	private String[] buildCommandLine(long timeInSeconds) {
-		List<String> cmd = new ArrayList<>();
+        boolean isNumericDelay = NumberUtils.isCreatable(delay);
+        boolean isTimeUnit = Arrays.stream(ChronoUnit.values())
+                .anyMatch(chronoUnit -> chronoUnit.name().equalsIgnoreCase(unit));
 
-		if (SystemUtils.IS_OS_WINDOWS) {
-			cmd.add("shutdown");
-			cmd.add("-s");
-			cmd.add("-t");
-			cmd.add(String.valueOf(timeInSeconds));
-		}
-		else if (SystemUtils.IS_OS_MAC || SystemUtils.IS_OS_UNIX) {
-			cmd.add("sudo");
-			cmd.add("shutdown");
-			cmd.add("-h");
-			cmd.add(timeInSeconds == 0 ? "now" : "+" + (timeInSeconds / 60));
-		}
+        if (isNumericDelay && isTimeUnit) {
+            return ShutdownNetworkActionData.builder()
+                    .delay(Integer.parseInt(delay))
+                    .unit(ChronoUnit.valueOf(unit.toUpperCase()))
+                    .build();
+        }
 
-		return cmd.toArray(new String[0]);
-	}
+        return null;
+    }
+
+    private String[] buildCommandLine(long timeInSeconds) {
+        List<String> cmd = new ArrayList<>();
+
+        if (SystemUtils.IS_OS_WINDOWS) {
+            cmd.add("shutdown");
+            cmd.add("-s");
+            cmd.add("-t");
+            cmd.add(String.valueOf(timeInSeconds));
+        } else if (SystemUtils.IS_OS_MAC || SystemUtils.IS_OS_UNIX) {
+            // cmd.add("sudo"); // using 'sudo' requires human intervention ;)
+            // shutdown command uses time in minutes
+            String sdTime = "now";
+            int minutes = Math.toIntExact(timeInSeconds / 60);
+            if (minutes > 0) {
+                sdTime = "+" + minutes;
+            }
+
+            cmd.add("shutdown");
+            cmd.add("-h");
+            cmd.add(sdTime);
+        }
+
+        return cmd.toArray(new String[0]);
+    }
 
 }
